# 6502emu

./: CMakeLists.txt  Logger.cpp  Logger.hpp  README.md  cpu.h  cpu6502.cpp  cpu6502.h  cpu_types.h  io.h  main.cpp  main_test.cpp  memory.cpp  memory.h  run_tests.sh  system.h  system6502_basic.cpp  system6502_basic.h
test/: CMakeLists.txt
